# 42_call_me_maybe

./: .gitignore  Makefile  README.md  pyproject.toml
data/_output/: PREFERRED_function_calling_results.json  function_calling_results.json
data/input/: SHORT_function_calling_tests.json  _delme.json  _delme2.json  function_calling_tests.json
data/output/: EXPECTED_function_calling_results.json  OUT_function_calling_results.json  function_calling_results.json
src/: __main__.py  cmm_llm.py
tests/: test_simple.py  test_unit_test.py
