[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
    "torch>=2.10.0",
    "transformers>=5.0.0",
]
[tool.mypy]
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
exclude = ["llm_sdk/"]

[[tool.mypy.overrides]]
module = "llm_sdk.*"
ignore_errors = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = [
  "src", 
  "."
]
testpaths = ["tests"]